--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "build:server": "tsc -p server/tsconfig.json",
     "preview": "vite preview",
     "start": "tsx server/index.ts",
-    "deploy": "./scripts/push-to-minipc.sh"
+    "deploy": "./scripts/push-to-minipc.sh",
+    "migrate:words": "tsx server/scripts/migrate-to-default.ts"
   },
   "dependencies": {
     "@discord/embedded-app-sdk": "^1.2.0",
+    "@types/multer": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
@@ -36,4 +39,3 @@
     "vite": "^5.0.12"
   }
 }
-
