--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,13 +14,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "outDir": "../dist/server",
-    "rootDir": ".",
+    "rootDir": "..",
     "ignoreDeprecations": "5.0",
     "paths": {
-      "@server/*": ["./*"],
-      "@shared/*": ["../shared/*"]
+      "@server/*": ["./server/*"],
+      "@shared/*": ["./shared/*"]
     }
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "../shared/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
