--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
-    "test:orchestrated": "playwright test orchestrated-game-clean.spec.ts --headed"
+    "test:orchestrated": "playwright test orchestrated-game-clean.spec.ts --headed",
+    "test:bots": "playwright test bot-testing.spec.ts --headed"
   },
   "dependencies": {
     "@discord/embedded-app-sdk": "^1.2.0",
@@ -24,6 +25,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^2.0.2",
+    "pino": "^10.1.1",
+    "pino-pretty": "^13.1.3",
+    "pino-roll": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
